// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout can render with children 1`] = `
<div>
  <section
    class="container mx-auto p-4 bg-white h-screen"
  >
    <p>
      Hello!
    </p>
  </section>
</div>
`;

exports[`Layout can render with multiple children 1`] = `
<div>
  <section
    class="container mx-auto p-4 bg-white h-screen"
  >
    <p>
      Hello!
    </p>
    <p>
      More text!
    </p>
  </section>
</div>
`;

exports[`Layout can render without children 1`] = `
<div>
  <section
    class="container mx-auto p-4 bg-white h-screen"
  />
</div>
`;
